<resources>
    <string name="app_name">Real Estate Manager</string>

    <!--MAIN FRAGMENT-->
    <string name="search_bar_hint">What are you looking for ?</string>
    <string name="categories_title_main_page_fragment">Categories</string>
    <string name="home_fragment_recently_added_title">Recently Added</string>
    <string name="no_items_selected">No Items Selected</string>
    <string name="new_user_dialog_title">Create User ?</string>
    <string name="new_user_dialog_message">I don\'t know who you are yet. \n
        Your profile will allow you to create new real estate. \n
        You can create your profile later in <b>Menu > Profile</b></string>
    <string name="new_user_dialog_positive_btn">Create Now</string>
    <string name="new_user_dialog_negative_btn">Later</string>



    <!--DRAWER MENU-->
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_new">New</string>
    <string name="drawer_menu_map">Map</string>
    <string name="drawer_menu_simulation">Simulation</string>
    <string name="drawer_menu_draft">Draft</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_settings">Settings</string>

    <!--ITEM LIST-->
    <string name="badge_sold_text">Sold</string>
    <string name="badge_for_sale_text">For Sale</string>

    <!--FILTER ACTIVITY TEXT-->
    <string name="activity_filter_price">Price</string>
    <string name="activity_filter_surface">Surface</string>
    <string name="activity_filter_room">Rooms</string>
    <string name="activity_filter_type">Type</string>
    <string name="activity_filter_input_btn">Apply</string>
    <string name="activity_filter_location">Location</string>
    <string name="activity_filter_location_hint">Where you going ?</string>

    <!-- Type of Estate -->
    <string name="activity_filter_type_house_text">House</string>
    <string name="activity_filter_type_mansion_text">Mansion</string>
    <string name="activity_filter_type_duplex_text">Duplex</string>
    <string name="activity_filter_type__text">House</string>
    <string name="activity_filter_type_penthouse_text">Penthouse</string>
    <string name="activity_filter_type_flat_text">Flat</string>

    <!--NEW ESTATE ACTIVITY TEXT-->
    <string name="activity_new_estate_toolbar_title">Post an Estate</string>

    <!--NEW ESTATE FRAGMENT TEXT-->
    <string name="fragment_new_estate_image_section">Images</string>
    <string name="fragment_new_estate_description_section">Description</string>
    <string name="fragment_new_estate_nearby_section">Nearby</string>
    <string name="fragment_new_estate_agent_section">Estate Agent</string>
    <string name="fragment_new_estate_edit_text_title">Title*</string>
    <string name="fragment_new_estate_edit_text_type">Type*</string>
    <string name="fragment_new_estate_edit_text_location">Location*</string>
    <string name="fragment_new_estate_edit_text_surface">Surface*</string>
    <string name="fragment_new_estate_edit_text_rooms">Rooms*</string>
    <string name="fragment_new_estate_edit_text_description">Description*</string>
    <string name="fragment_new_estate_edit_text_price">Price*</string>
    <string name="fragment_new_estate_edit_text_agent">Agent*</string>
    <string name="fragment_new_estate_edit_text_sale_section">Sale</string>
    <string name="fragment_new_estate_edit_text_sale_text">This estate is sold</string>


    <!--DETAIL FRAGMENT-->
    <string name="fragment_detail_title_toolbar">Details</string>
    <string name="fragment_detail_title_detail">Criteria</string>
    <string name="fragment_detail_title_description">Description</string>
    <string name="fragment_detail_title_nearby">Nearby</string>
    <string name="fragment_detail_title_posted">Posted By</string>
    <string name="fragment_detail_estate_manager">Estate Manager</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ACTIVITY MAPS -->
    <string name="title_activity_maps">Map</string>

    <!-- ALERT DIALOG PICK IMAGE -->
    <string name="alert_dialog_pick_image_title">Choose a photo</string>
    <string name="alert_dialog_pick_image_gallery">with Gallery</string>
    <string name="alert_dialog_pick_image_camera">with Camera</string>

    <!-- INPUT FROM ERROR MESSAGES -->
    <string name="form_error_characters_3">I need a title (at least 3 characters)</string>
    <string name="form_error_characters_20">I need more precisions</string>
    <string name="form_error_not_geolocated">I need to be geolocated</string>
    <string name="form_error_type">I need a type</string>
    <string name="form_error_images">I need an image</string>
    <string name="form_error_price">I need a price</string>
    <string name="form_error_surface">I need a surface</string>
    <string name="form_error_rooms">I need room</string>
    <string name="form_error_agent">I need an Estate Agent</string>
    <string name="form_error_format_address">Incorrect Address Format</string>
    <string name="form_error_first_name">I need a first name</string>
    <string name="form_error_last_name">I need a last name</string>

    <!-- DIALOG FROM ERROR MESSAGES -->
    <string name="dialog_invalid_form_estate_title">Impossible to Create Estate</string>
    <string name="dialog_invalid_form_agent_title">Impossible to Create Estate</string>
    <string name="dialog_invalid_form_message">This form contain errors, please check it and retry</string>

    <!-- CHIPs TEXT -->
    <string name="chip_transport">Transport</string>
    <string name="chip_store">Store</string>
    <string name="chip_health">Health</string>
    <string name="chip_school">School</string>
    <string name="chip_restaurant">Restaurant</string>
    <string name="chip_supermarket">Supermarket</string>
    <string name="chip_sport">Sport</string>

    <!-- PERMISSIONS -->
    <string name="permission_denied">Permission Denied</string>

    <!-- ACTIVITY FILTER -->
    <string name="autocomplete_city_error">Impossible to load this city</string>
    <string name="title_activity_maps_for_result">Map</string>

    <!-- GENERAL MESSAGES -->
    <string name="result_cancel">Canceled</string>
    <string name="result_error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_channel_name">@string/app_name</string>
    <string name="notification_channel_description">Display notifications when an Estate was correctly adding</string>
    <string name="notification_adding_success_title">New Estate Adding</string>
    <string name="notification_adding_success_message">Great ! You\'re estate was correctly adding</string>


    <!-- DRAFT ITEM-->
    <string name="draft_item_date_placeholder">Modified : </string>

    <!-- SIMULATION FRAGMENT -->
    <string name="fragment_simulation_loan_amount">Loan Amount</string>
    <string name="fragment_simulation_contribution_amount">Contribution Amount</string>
    <string name="fragment_simulation_loan_rate">Loan Rate</string>
    <string name="fragment_simulation_loan_duration">Loan Duration</string>
    <string name="fragment_simulation_submit">Estimate</string>
    <string name="fragment_simulation_loan_cost">Cost : </string>
    <string name="fragment_simulation_amount_borrowed">Amount borrowed : </string>
    <string name="fragment_simulation_monthly_payment">Monthly Payment</string>

    <!-- SIMULATION FRAGMENT ERROR -->
    <string name="simulation_error_empty_value">This value cannot be empty</string>
    <string name="simulation_error_long_duration">This duration are too long</string>
    <string name="simulation_error_high_rate">This rate are too high</string>

    <!-- SNACK BAR TEXT -->
    <string name="draft_snackbar_item_remove_text">1 item removed</string>
    <string name="draft_snackbar_undo_text">Undo</string>

    <!-- DIALOG BOTTOM SHEET -->
    <string name="bottom_sheet_published">Published by : </string>

    <!-- PROFILE FRAGMENT -->
    <string name="create_new_profile">Create New Profile</string>
    <string name="fragment_profile_name">Profile</string>
    <string name="fragment_profile_view_profile">View Profile</string>
    <string name="fragment_profile_empty_list_message">You haven\'t posted estates yet</string>
    <string name="fragment_profile_empty_list_button">Add New</string>

    <!-- EDIT PROFILE FRAGMENT -->
    <string name="fragment_edit_profile_change_image">Change Image</string>
    <string name="fragment_edit_profile_first_name">First Name</string>
    <string name="fragment_edit_profile_last_name">Last Name</string>
    <string name="fragment_edit_profile_first_name_hint">John</string>
    <string name="fragment_edit_profile_last_name_hint">Doe</string>


</resources>
