<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragment_new_estate_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.NewEstateFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_new_estate_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_new_estate_linear_layout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_app_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_new_estate_image_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_new_estate_image_section"
                android:layout_marginBottom="@dimen/large_app_margin"
                android:textColor="@color/colorPrimary"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_new_estate_recycler_view_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_new_estate_recycler_height"
                android:background="@color/quantum_grey300" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fragment_new_estate_floating_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="@dimen/large_app_margin"
                android:src="@drawable/ic_twotone_add_24px"
                android:tint="@color/colorTextOnPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_new_estate_image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_app_margin"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_new_estate_description_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_new_estate_description_section"
                android:layout_marginBottom="@dimen/large_app_margin"
                android:textColor="@color/colorPrimary"/>

                            <!-- EDIT TEXT TITLE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_new_estate_input_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- EDIT TEXT DESCRIPTION -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_new_estate_input_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:maxHeight="350dp"/>

            </com.google.android.material.textfield.TextInputLayout>

                            <!-- AUTOCOMPTETE TYPE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fragment_new_estate_input_text_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_twotone_arrow_drop_down_24px"
                    android:editable="false"
                    android:padding="12dp"/>

            </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- EDIT TEXT SURFACE -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_new_estate_input_layout_surface"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="@dimen/default_app_margin"
                        android:hint="@string/fragment_new_estate_edit_text_surface"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_new_estate_input_text_surface"
                            android:layout_width="@dimen/fragment_new_estate_input_text_width"
                            android:layout_height="match_parent"
                            android:inputType="numberSigned"
                            android:maxLength="6" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- EDIT TEXT ROOMS -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_new_estate_input_layout_rooms"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_app_margin"
                        android:hint="@string/fragment_new_estate_edit_text_rooms"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_new_estate_input_text_rooms"
                            android:layout_width="@dimen/fragment_new_estate_input_text_width"
                            android:layout_height="match_parent"
                            android:inputType="numberSigned" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            <!-- EDIT TEXT LOCATION -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_new_estate_input_autocomplete_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <!-- EDIT TEXT PRICE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_new_estate_input_text_price"
                    android:layout_width="@dimen/fragment_new_estate_input_text_width"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_new_estate_nearby_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_new_estate_nearby_section"
                android:layout_marginBottom="@dimen/large_app_margin"
                android:textColor="@color/colorPrimary"/>

           <include layout="@layout/nearby_chip_filters"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_new_estate_agent_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_new_estate_agent_section"
                android:layout_marginBottom="@dimen/large_app_margin"
                android:textColor="@color/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_new_estate_input_layout_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/fragment_new_estate_edit_text_agent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="@dimen/default_app_margin">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fragment_new_estate_input_text_agent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_twotone_arrow_drop_down_24px"
                    android:editable="false"
                    android:padding="12dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>