<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.EditProfileFragment"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_edit_profile_image_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/default_app_elevation"
        android:layout_marginBottom="@dimen/large_app_margin">

        <LinearLayout
            android:id="@+id/fragment_edit_profile_image_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/large_app_padding"
            android:layout_margin="@dimen/large_app_margin"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_edit_profile_image"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:gravity="center_vertical"
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/small_app_margin"
                tools:src="@drawable/ic_account_circle_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_profile_change_image"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_edit_profile_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/default_app_elevation"
        android:layout_below="@id/fragment_edit_profile_image_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_app_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_app_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_profile_first_name"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="@dimen/large_app_margin"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_profile_last_name"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_app_margin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_profile_first_name_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/large_app_margin"
                    android:inputType="textCapWords"
                    android:hint="@string/fragment_edit_profile_first_name_hint"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_profile_last_name_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:hint="@string/fragment_edit_profile_last_name_hint"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>